@@ -1,3 +1,8 @@
+2010-12-31  Olivier Paquet  <olivier.paquet@gmail.com>
+
+	* libtiff/tif_dirwrite.c: Fixed writing of TIFFTAG_REFERENCEBLACKWHITE.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2266
+
 2010-12-23  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* tools/tiffcp.c, man/tiffcp.1: Added support for specifying the
